--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "description": "jogo da velha ",
   "main": "sw.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "serve ."
   },
   "author": "Mariana Santos Teixeira",
   "license": "ISC"
